--- a/llamaindex_graphrag.ipynb
+++ b/llamaindex_graphrag.ipynb
@@ -10,7 +10,7 @@
     "# !cp '/workspace/repos/agentic-ai/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx' /workspace/data\n",
     "!apt update\n",
     "!apt install tmux vim -y\n",
-    "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j\n",
+    "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning\n",
     "!pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai graspologic\n",
     "!pip3 install flash-attn --no-build-isolation\n",
     "!curl -L https://ollama.com/download/ollama-linux-amd64 -o /usr/bin/ollama\n",
@@ -288,6 +288,7 @@
    "source": [
     "import os\n",
     "import torch\n",
+    "from llama_index.embeddings.adapter.base import LinearAdapterEmbeddingModel\n",
     "from llama_index.llms.huggingface_api import HuggingFaceInferenceAPI\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
     "# from llama_index.embeddings.instructor import InstructorEmbedding\n",
@@ -323,8 +324,12 @@
     "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "# embed_model_name = \"hkunlp/instructor-base\"\n",
     "print(\"loading embed model...\")\n",
-    "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
-    "# embed_model = InstructorEmbedding(model_name=embed_model_name)\n",
+    "finetune_path = \"/workspace/data/adapter_model_fullFT\"\n",
+    "if os.path.exists(finetune_path):\n",
+    "    base_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "    embed_model = LinearAdapterEmbeddingModel(base_embed_model, finetune_path)\n",
+    "else:\n",
+    "    embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "\n",
     "Settings.embed_model = embed_model\n"
    ]
