--- a/llamaindex_pretrain_embeddings.ipynb
+++ b/llamaindex_pretrain_embeddings.ipynb
@@ -1,30 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "!ollama pull llama3.1:70b"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "!ollama pull mistral-nemo"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!pip3 install llama-index-finetuning"
+    "!pip3 install --upgrade llama-index-finetuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!pip3 install llama-index-llms-azure-openai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!pip3 install llama-index-embeddings-adapter"
    ]
   },
   {
@@ -41,6 +49,8 @@
     "# model_name, num_ctx = \"llama3.1:70b\", 128000\n",
     "model_name, num_ctx = \"mistral-nemo\", 128000\n",
     "# model_name, num_ctx = \"mistral-nemo:12b-instruct-2407-fp16\", 128000\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
     "\n",
     "addtion_kwargs = {\"max_new_tokens\": 200}\n",
     "\n",
@@ -180,31 +190,53 @@
    "source": [
     "from llama_index.core.node_parser import SentenceSplitter\n",
     "\n",
-    "parser = SentenceSplitter(chunk_size=500, chunk_overlap=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "parser = SentenceSplitter(chunk_size=500, chunk_overlap=100)\n",
     "nodes = parser.get_nodes_from_documents(documents, show_progress=True)\n",
     "len(nodes)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "!pip3 install spacy"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "from llama_index.core.evaluation import DatasetGenerator, RelevancyEvaluator\n",
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "\n",
+    "\n",
+    "system_prompt = \"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge.\\ngenerate only questions based on the below query.\\n\\nYou are a FINRA certified professional that specializes in compliance for financial firms. Your task is to setup questions for an upcoming compliance certification examination. The questions should be diverse in nature across the document. References to other sections or acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are particularly important. Restrict the questions to the context information provided. Return only the questions without any other dialogue (e.g. 'Sure, here are five questions based on the provided context:', '**Question 1**', or unnecessary punctuation '**' at beginning or end).\\n\"\"\"\n",
+    "\n",
+    "# data_generator = DatasetGenerator.from_documents(documents, \n",
+    "#                                                  llm=llm,\n",
+    "#                                                  num_questions_per_chunk=5,\n",
+    "#                                                 #  transformations=[SentenceSplitter(chunk_size=500, chunk_overlap=50)],\n",
+    "#                                                  show_progress=True\n",
+    "#                                                  )\n",
+    "\n",
+    "data_generator = DatasetGenerator(nodes=nodes,\n",
+    "                                  llm=llm,\n",
+    "                                  num_questions_per_chunk=5,\n",
+    "                                  show_progress=True\n",
+    "                                )\n",
+    "data_generator.text_question_template.template = system_prompt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test = data_generator.generate_dataset_from_nodes(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "system_prompt = \"\"\"You are an expert at creating high-quality question and answer pairs based on given text. Your task is to generate 5 diverse question-answer pairs from the following document. Ensure that:\n",
     "\n",
@@ -239,25 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = \"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge.\\ngenerate only questions based on the below query.\\n\\nYou are a FINRA certified professional that specializes in compliance for financial firms. Your task is to setup {num_questions_per_chunk} questions for an upcoming compliance certification examination. The questions should be diverse in nature across the document. References to other sections or acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are particularly important. Restrict the questions to the context information provided. Return only the questions without any other dialogue (e.g. 'Sure, here are five questions based on the provided context:').\\n\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "context_str=nodes[4].text\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "system_prompt = f\"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge.\\ngenerate only questions based on the below query.\\n\\nYou are a FINRA certified professional that specializes in compliance for financial firms. Your task is to setup 5 questions for an upcoming compliance certification examination. The questions should be diverse in nature across the document (e.g. True/False, multiple choice, fill in the blank). References to other sections or acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are particularly important. Restrict the questions to the context information provided. Return only the questions without any other dialogue.\"\"\""
+    "system_prompt = \"\"\"Context information is below.\\n\\n---------------------\\n{context_str}\\n---------------------\\n\\nGiven the context information and no prior knowledge.\\ngenerate only questions based on the below query.\\n\\nYou are a FINRA certified professional that specializes in compliance for financial firms. Your task is to setup {num_questions_per_chunk} questions for an upcoming compliance certification examination. The questions should be diverse in nature across the document. References to other sections or acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are particularly important. Restrict the questions to the context information provided. Return only the questions without any other dialogue (e.g. 'Sure, here are five questions based on the provided context:', '**Question 1**', or unnecessary punctuation at beginning or end).\\n\"\"\"\n"
    ]
   },
   {
@@ -271,7 +285,7 @@
     "from llama_index.llms.openai import OpenAI\n",
     "import random\n",
     "\n",
-    "rand_index = random.sample(range(len(nodes)), 5)\n",
+    "rand_index = random.sample(range(len(nodes)), 50)\n",
     "train_perc=0.9\n",
     "train_size = int(len(rand_index)*train_perc)\n",
     "\n",
@@ -284,37 +298,28 @@
     "    nodes=[nodes[x] for x in rand_index[:train_size]],\n",
     "    verbose=False\n",
     ")\n",
+    "assert len(train_dataset.relevant_docs) == len(train_dataset.queries)\n",
     "train_dataset.save_json(\"/workspace/data/train_dataset.json\")\n",
     "\n",
-    "# val_dataset = generate_qa_embedding_pairs(\n",
-    "#     # qa_generate_prompt_tmpl = system_prompt,\n",
-    "#     num_questions_per_chunk=5,\n",
-    "#     save_every=100,\n",
-    "#     output_path=\"/workspace/data/val_dataset.json\",\n",
-    "#     llm=llm, \n",
-    "#     nodes=[nodes[x] for x in rand_index[train_size:]],\n",
-    "#     verbose=False\n",
-    "# )\n",
-    "# val_dataset.save_json(\"/workspace/data/val_dataset.json\")\n"
+    "val_dataset = generate_qa_embedding_pairs(\n",
+    "    qa_generate_prompt_tmpl = system_prompt,\n",
+    "    num_questions_per_chunk=5,\n",
+    "    save_every=100,\n",
+    "    output_path=\"/workspace/data/val_dataset.json\",\n",
+    "    llm=llm, \n",
+    "    nodes=[nodes[x] for x in rand_index[train_size:]],\n",
+    "    verbose=False\n",
+    ")\n",
+    "assert len(val_dataset.relevant_docs) == len(val_dataset.queries)\n",
+    "val_dataset.save_json(\"/workspace/data/val_dataset.json\")\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for i in train_dataset:\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i"
+    "# Fine-tuning embeddings"
    ]
   },
   {
@@ -335,7 +340,11 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import os\n",
+    "#####################\n",
+    "# in llama_index/embeddings/huggingface/base need to add \"show_progress_bar=False\" to 204, 213\n",
+    "#####################\n",
+    "\n",
+    "import os, json\n",
     "\n",
     "from llama_index.finetuning import EmbeddingAdapterFinetuneEngine, SentenceTransformersFinetuneEngine\n",
     "from llama_index.core.evaluation import EmbeddingQAFinetuneDataset\n",
@@ -361,32 +370,36 @@
     "embed_model_name = \"Alibaba-NLP/gte-Qwen2-1.5B-instruct\"\n",
     "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "print(\"loading embed model...\")\n",
-    "base_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "# base_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "\n",
-    "Settings.embed_model = base_embed_model\n",
+    "# Settings.embed_model = base_embed_model\n",
     "\n",
-    "finetune_engine = EmbeddingAdapterFinetuneEngine(\n",
+    "finetune_engine = SentenceTransformersFinetuneEngine(\n",
     "    train_dataset,\n",
-    "    base_embed_model,\n",
-    "    batch_size=10,\n",
-    "    model_output_path=\"/workspace/data/adapter_model\",\n",
-    "    # val_dataset=val_dataset,\n",
+    "    embed_model_name,\n",
+    "    batch_size=5,\n",
+    "    model_output_path=\"/workspace/data/adapter_model_fullFT\",\n",
+    "    val_dataset=val_dataset,\n",
     "    epochs=4,\n",
-    "    verbose=False,\n",
+    "    show_progress_bar=True,\n",
     "    # can optionally pass along any parameters that go into `train_model`\n",
     "    # optimizer_class=torch.optim.SGD,\n",
     "    # optimizer_params={\"lr\": 0.001}\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in train_dataset:\n",
-    "    break"
+    ")\n",
+    "\n",
+    "\n",
+    "# finetune_engine = EmbeddingAdapterFinetuneEngine(\n",
+    "#     train_dataset,\n",
+    "#     base_embed_model,\n",
+    "#     batch_size=10,\n",
+    "#     model_output_path=\"/workspace/data/adapter_model\",\n",
+    "#     # val_dataset=val_dataset,\n",
+    "#     epochs=4,\n",
+    "#     verbose=False,\n",
+    "#     # can optionally pass along any parameters that go into `train_model`\n",
+    "#     # optimizer_class=torch.optim.SGD,\n",
+    "#     # optimizer_params={\"lr\": 0.001}\n",
+    "# )"
    ]
   },
   {
@@ -399,12 +412,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "type(train_dataset)"
+    "# How to load the finetuned model"
    ]
   },
   {
@@ -413,8 +424,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create dataset\n",
-    "# Eval dataset for baseline\n"
+    "from llama_index.embeddings.adapter.base import LinearAdapterEmbeddingModel\n",
+    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
+    "\n",
+    "embed_model_name = \"Alibaba-NLP/gte-Qwen2-1.5B-instruct\"\n",
+    "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
+    "print(\"loading embed model...\")\n",
+    "base_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "embed_model = LinearAdapterEmbeddingModel(base_embed_model, \"/workspace/data/adapter_model\")"
    ]
   },
   {
@@ -422,28 +439,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from llama_index.embeddings.adapter.base import LinearAdapterEmbeddingModel\n",
+    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
+    "\n",
+    "embed_model_name = \"Alibaba-NLP/gte-Qwen2-1.5B-instruct\"\n",
+    "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
+    "print(\"loading embed model...\")\n",
+    "base_embed_model = HuggingFaceEmbedding(model_name=\"/workspace/data/adapter_model_fullFT\")"
+   ]
   },
   {
    "cell_type": "code",
