working embed finetune

--- a/llamaindex_pretrain_embeddings.ipynb
+++ b/llamaindex_pretrain_embeddings.ipynb
@@ -190,7 +190,7 @@
    "source": [
     "from llama_index.core.node_parser import SentenceSplitter\n",
     "\n",
-    "parser = SentenceSplitter(chunk_size=500, chunk_overlap=100)\n",
+    "parser = SentenceSplitter(chunk_size=500, chunk_overlap=50)\n",
     "nodes = parser.get_nodes_from_documents(documents, show_progress=True)\n",
     "len(nodes)"
    ]
@@ -285,14 +285,14 @@
     "from llama_index.llms.openai import OpenAI\n",
     "import random\n",
     "\n",
-    "rand_index = random.sample(range(len(nodes)), 50)\n",
-    "train_perc=0.9\n",
+    "rand_index = random.sample(range(len(nodes)), len(nodes))\n",
+    "train_perc=0.95\n",
     "train_size = int(len(rand_index)*train_perc)\n",
     "\n",
     "train_dataset = generate_qa_embedding_pairs(\n",
     "    qa_generate_prompt_tmpl = system_prompt,\n",
     "    num_questions_per_chunk=5,\n",
-    "    save_every=100,\n",
+    "    save_every=500,\n",
     "    output_path=\"/workspace/data/train_dataset.json\",\n",
     "    llm=llm, \n",
     "    nodes=[nodes[x] for x in rand_index[:train_size]],\n",
@@ -304,7 +304,7 @@
     "val_dataset = generate_qa_embedding_pairs(\n",
     "    qa_generate_prompt_tmpl = system_prompt,\n",
     "    num_questions_per_chunk=5,\n",
-    "    save_every=100,\n",
+    "    save_every=500,\n",
     "    output_path=\"/workspace/data/val_dataset.json\",\n",
     "    llm=llm, \n",
     "    nodes=[nodes[x] for x in rand_index[train_size:]],\n",
@@ -377,10 +377,10 @@
     "finetune_engine = SentenceTransformersFinetuneEngine(\n",
     "    train_dataset,\n",
     "    embed_model_name,\n",
-    "    batch_size=5,\n",
+    "    batch_size=6,\n",
     "    model_output_path=\"/workspace/data/adapter_model_fullFT\",\n",
     "    val_dataset=val_dataset,\n",
-    "    epochs=4,\n",
+    "    epochs=1,\n",
     "    show_progress_bar=True,\n",
     "    # can optionally pass along any parameters that go into `train_model`\n",
     "    # optimizer_class=torch.optim.SGD,\n",
@@ -409,6 +409,83 @@
    "outputs": [],
    "source": [
     "finetune_engine.finetune()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.finetuning import EmbeddingAdapterFinetuneEngine\n",
+    "from llama_index.core.evaluation import EmbeddingQAFinetuneDataset\n",
+    "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
+    "from llama_index.core import Document\n",
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "data = {'doc1': \"In classical thermodynamics, entropy (from Greek τρoπή (tropḗ) 'transformation') is a property of a thermodynamic system that expresses the direction or outcome of spontaneous changes in the system. The term was introduced by Rudolf Clausius in the mid-19th century to explain the relationship of the internal energy that is available or unavailable for transformations in form of heat and work. Entropy predicts that certain processes are irreversible or impossible, despite not violating the conservation of energy.\",\n",
+    "        'doc2': \"The second law of thermodynamics states that the total entropy of an isolated system can never decrease over time, and is constant if and only if all processes are reversible. Isolated systems spontaneously evolve towards thermodynamic equilibrium, the state with maximum entropy. Non-isolated systems may lose entropy, provided their environment's entropy increases by a greater amount. In the early 1850s, Rudolf Clausius stated the law in this form: heat can never pass from a colder to a warmer body without some other change, connected therewith, occurring at the same time.\",\n",
+    "        'doc3': \"The third law of thermodynamics states that the entropy of a perfect crystal approaches zero as the temperature approaches zero. This is because a perfect crystal has only one possible microstate, and thus the entropy is zero. The constant value is called the residual entropy of the crystal. This allows for the determination of the absolute entropy of any substance at any temperature above absolute zero. The entropy of a perfect crystal at absolute zero is typically zero, and in fact is zero for any perfectly ordered system.\",\n",
+    "        'doc4': \"The zeroth law of thermodynamics states that if two systems are in thermal equilibrium with a third system, they are in thermal equilibrium with each other. This law helps define the concept of temperature. If A is in thermal equilibrium with B, and B is in thermal equilibrium with C, then A is in thermal equilibrium with C. This allows temperature to be defined as a measure of the average kinetic energy of the particles in a system, which is a fundamental concept in thermodynamics.\",\n",
+    "        }\n",
+    "documents = [Document(text=t) for t in data]\n",
+    "\n",
+    "parser = SentenceSplitter(chunk_size=10, chunk_overlap=2)\n",
+    "nodes = parser.get_nodes_from_documents(documents, show_progress=True)\n",
+    "rand_index = random.sample(range(len(nodes)), len(nodes))\n",
+    "train_perc=0.95\n",
+    "train_size = int(len(rand_index)*train_perc)\n",
+    "\n",
+    "llm = None # your LLM here for extracting questions from the documents\n",
+    "\n",
+    "train_dataset = generate_qa_embedding_pairs(\n",
+    "    num_questions_per_chunk=5,\n",
+    "    llm=llm, \n",
+    "    nodes=[nodes[x] for x in rand_index[:train_size]],\n",
+    "    verbose=False\n",
+    ")\n",
+    "\n",
+    "val_dataset = generate_qa_embedding_pairs(\n",
+    "    num_questions_per_chunk=5,\n",
+    "    llm=llm, \n",
+    "    nodes=[nodes[x] for x in rand_index[train_size:]],\n",
+    "    verbose=False\n",
+    ")\n",
+    "\n",
+    "embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
+    "base_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "\n",
+    "finetune_engine = EmbeddingAdapterFinetuneEngine(\n",
+    "    train_dataset,\n",
+    "    base_embed_model,\n",
+    "    batch_size=5,\n",
+    "    epochs=1,\n",
+    "    verbose=False,\n",
+    ")"
    ]
   },
   {
