--- a/llamaindex_graphrag.ipynb
+++ b/llamaindex_graphrag.ipynb
@@ -291,11 +291,8 @@
     "from llama_index.embeddings.adapter.base import LinearAdapterEmbeddingModel\n",
     "from llama_index.llms.huggingface_api import HuggingFaceInferenceAPI\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
-    "# from llama_index.embeddings.instructor import InstructorEmbedding\n",
     "\n",
     "from llama_index.llms.huggingface import HuggingFaceLLM\n",
-    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Settings, PropertyGraphIndex\n",
-    "from llama_index.readers.file import PandasExcelReader\n",
     "from llama_index.core import set_global_tokenizer, Document\n",
     "from llama_index.core.embeddings import resolve_embed_model\n",
     "from transformers import AutoTokenizer\n",
@@ -304,6 +301,8 @@
     "    VectorStoreIndex,\n",
     "    StorageContext,\n",
     "    load_index_from_storage,\n",
+    "    PropertyGraphIndex,\n",
+    "    Settings\n",
     ")\n",
     "\n",
     "\n",
@@ -402,9 +401,7 @@
     "else:\n",
     "    print(f'    building from scratch...')\n",
     "    documents = [Document(text=t, \n",
-    "                        #   text_template='{metadata_str}\\n\\n{content}',\n",
-    "                          text_template='{metadata_str}',\n",
-    "                        #   text_template = 'METADATA:\\n{metadata_str}\\n\\nCONTEXT:\\n{content}',\n",
+    "                          text_template='{metadata_str}\\n\\n{content}',\n",
     "                          metadata=get_metadata(m, t, metadata={\"section\":None, \"description\":None, \"mentioned_sections\":None})) \\\n",
     "                            for m,t in data.items()]\n",
     "                        # excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
