transcribe mp4 video and summarize working

--- a/whisper.ipynb
+++ b/whisper.ipynb
@@ -101,8 +101,239 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install llama-index-readers-smart-pdf-loader llmsherpa"
+    "!pip3 install moviepy openai python-dotenv pydub llama-index llama-index-llms-openai"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!apt-get update && apt-get install ffmpeg -y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "from moviepy.editor import VideoFileClip\n",
+    "\n",
+    "def video_to_audio(video_path, output_audio_path):\n",
+    "    \"\"\"\n",
+    "    Convert a video to audio and save it to the output path.\n",
+    "\n",
+    "    Parameters:\n",
+    "    video_path (str): The path to the video file.\n",
+    "    output_audio_path (str): The path to save the audio to.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    clip = VideoFileClip(video_path)\n",
+    "    audio = clip.audio\n",
+    "    audio.write_audiofile(output_audio_path)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video_to_audio(\"/workspace/data/video1512218125.mp4\", \"/workspace/data/video_audio.mp3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydub import AudioSegment\n",
+    "\n",
+    "def split_audio_into_chunks(file_path, output_dir, max_chunk_size_mb=24):\n",
+    "    # Load the audio file\n",
+    "    audio = AudioSegment.from_mp3(file_path)\n",
+    "    \n",
+    "    # Calculate the maximum duration for each chunk based on the size limit\n",
+    "    max_chunk_size_bytes = max_chunk_size_mb * 1024 * 1024\n",
+    "    max_chunk_duration = (max_chunk_size_bytes / len(audio.raw_data)) * len(audio)\n",
+    "    \n",
+    "    # Split and export the audio file into chunks\n",
+    "    start_time = 0\n",
+    "    chunk_index = 1\n",
+    "    while start_time < len(audio):\n",
+    "        end_time = min(start_time + max_chunk_duration, len(audio))\n",
+    "        chunk = audio[start_time:end_time]\n",
+    "        chunk.export(f\"{output_dir}/chunk_{chunk_index}.mp3\", format=\"mp3\")\n",
+    "        start_time = end_time\n",
+    "        chunk_index += 1\n",
+    "\n",
+    "# Example usage\n",
+    "split_audio_into_chunks(\"/workspace/data/video_audio.mp3\", \"/workspace/data\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(\"/workspace/repos/agentic-ai/.env\")\n",
+    "\n",
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "client = OpenAI(api_key=OPENAI_API_KEY)\n",
+    "\n",
+    "transcription = []\n",
+    "chunk_list = [chunk for chunk in os.listdir(\"/workspace/data\") if chunk.startswith(\"chunk\")]\n",
+    "chunk_list=sorted(chunk_list)\n",
+    "\n",
+    "\n",
+    "for chunk in chunk_list:\n",
+    "      print(f\"Transcribing {chunk}...\")\n",
+    "      audio_file = open(f\"/workspace/data/{chunk}\", \"rb\")\n",
+    "      transcription.append(client.audio.transcriptions.create(\n",
+    "          model=\"whisper-1\",\n",
+    "          file=audio_file\n",
+    "      ))\n",
+    "# print(transcription.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open(\"/workspace/data/transcription.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(transcription, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TreeSummarize?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle, os\n",
+    "from llama_index.core.response_synthesizers import TreeSummarize\n",
+    "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.core import (\n",
+    "    Settings,\n",
+    ")\n",
+    "\n",
+    "openai_api_key = os.environ.get(\"OPENAI_API_KEY\")\n",
+    "os.environ[\"OPENAI_API_KEY\"] = openai_api_key\n",
+    "with open(\"/workspace/data/transcription.pkl\", \"rb\") as f:\n",
+    "    transcription = pickle.load(f)\n",
+    "summarizer = TreeSummarize(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import (\n",
+    "    Settings,\n",
+    ")\n",
+    "llm = OpenAI(model=\"gpt-4o\", max_tokens=4000)\n",
+    "Settings.llm = llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_summary = \"You are a professional executive of AlphaTrAI. Your job is to summarize this text in great detail from a video transcription. The summary will be distributed to investors and stakeholders, so give a lot of details and examples from the transcription.\"\n",
+    "response = await summarizer.aget_response(prompt_summary, [doc.text for doc in transcription])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_doc = \" \".join([doc.text for doc in transcription])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_summary = f\"You are a professional executive at AlphaTrAI. Your job is to summarize text from a video transcription. The summary will be distributed to investors and stakeholders, so give a lot of details and examples from the transcription. The transcription is as follows:\\n\\n{full_doc}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = llm.complete(prompt_summary, max_tokens=4000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -327,36 +558,6 @@
    "source": [
     "for node in response.source_nodes:\n",
     "    print(node.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(documents[1].text)"
    ]
   },
   {
