--- a/whisper.ipynb
+++ b/whisper.ipynb
@@ -100,9 +100,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!pip3 install moviepy openai python-dotenv pydub llama-index llama-index-llms-openai"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -119,8 +117,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip3 install moviepy openai python-dotenv pydub llama-index llama-index-llms-openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls /workspace/data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from openai import OpenAI\n",
     "from moviepy.editor import VideoFileClip\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(\"/workspace/repos/agentic-ai/.env\")\n",
     "\n",
     "def video_to_audio(video_path, output_audio_path):\n",
     "    \"\"\"\n",
@@ -159,13 +178,14 @@
     "    audio = AudioSegment.from_mp3(file_path)\n",
     "    \n",
     "    # Calculate the maximum duration for each chunk based on the size limit\n",
-    "    max_chunk_size_bytes = max_chunk_size_mb * 1024 * 1024\n",
+    "    max_chunk_size_bytes = max_chunk_size_mb * 1024 * 1024 * 10\n",
     "    max_chunk_duration = (max_chunk_size_bytes / len(audio.raw_data)) * len(audio)\n",
     "    \n",
     "    # Split and export the audio file into chunks\n",
     "    start_time = 0\n",
     "    chunk_index = 1\n",
     "    while start_time < len(audio):\n",
+    "        print(f\"Exporting chunk {chunk_index}/{len(audio)/max_chunk_duration}\")\n",
     "        end_time = min(start_time + max_chunk_duration, len(audio))\n",
     "        chunk = audio[start_time:end_time]\n",
     "        chunk.export(f\"{output_dir}/chunk_{chunk_index}.mp3\", format=\"mp3\")\n",
@@ -184,17 +204,16 @@
    "source": [
     "from openai import OpenAI\n",
     "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv(\"/workspace/repos/agentic-ai/.env\")\n",
     "\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY\n",
+    "\n",
     "client = OpenAI(api_key=OPENAI_API_KEY)\n",
     "\n",
     "transcription = []\n",
     "chunk_list = [chunk for chunk in os.listdir(\"/workspace/data\") if chunk.startswith(\"chunk\")]\n",
     "chunk_list=sorted(chunk_list)\n",
-    "\n",
+    "print(chunk_list)\n",
     "\n",
     "for chunk in chunk_list:\n",
     "      print(f\"Transcribing {chunk}...\")\n",
@@ -205,13 +224,6 @@
     "      ))\n",
     "# print(transcription.text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -230,31 +242,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TreeSummarize?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pickle, os\n",
     "from llama_index.core.response_synthesizers import TreeSummarize\n",
-    "from llama_index.llms.openai import OpenAI\n",
     "from llama_index.core import (\n",
     "    Settings,\n",
     ")\n",
     "\n",
-    "openai_api_key = os.environ.get(\"OPENAI_API_KEY\")\n",
-    "os.environ[\"OPENAI_API_KEY\"] = openai_api_key\n",
+    "\n",
     "with open(\"/workspace/data/transcription.pkl\", \"rb\") as f:\n",
     "    transcription = pickle.load(f)\n",
     "summarizer = TreeSummarize(verbose=True)"
@@ -269,7 +263,9 @@
     "from llama_index.core import (\n",
     "    Settings,\n",
     ")\n",
-    "llm = OpenAI(model=\"gpt-4o\", max_tokens=4000)\n",
+    "from llama_index.llms.openai import OpenAI as LOpenAI\n",
+    "\n",
+    "llm = LOpenAI(model=\"gpt-4o\", max_tokens=4000)\n",
     "Settings.llm = llm"
    ]
   },
@@ -298,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_summary = f\"You are a professional executive at AlphaTrAI. Your job is to summarize text from a video transcription. The summary will be distributed to investors and stakeholders, so give a lot of details and examples from the transcription. The transcription is as follows:\\n\\n{full_doc}\"\n"
+    "prompt_summary = f\"You are a professional executive at AlphaTrAI. Your job is to summarize the text from a video transcription. The summary will be a memo distributed to investors and stakeholders. Be sure it is factual, optimistic, and containing little information about change. The transcription is as follows:\\n\\n{full_doc}\"\n"
    ]
   },
   {
@@ -307,16 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = llm.complete(prompt_summary, max_tokens=4000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(response.text)"
+    "response = llm.complete(prompt_summary, max_tokens=5000)"
    ]
   },
   {
@@ -327,6 +314,20 @@
    "source": [
     "print(response.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -570,7 +571,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
